[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/open-hexes.appsettings/demo/Demo.gd" type="Script" id=1]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="SettingsButton" type="Button" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.1
margin_left = -0.863907
margin_top = -13.5613
margin_right = -1.22382
margin_bottom = 29.4387
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="ScrollContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.95
margin_top = -0.943848
margin_bottom = -0.943848
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsWrapper" type="Control" parent="Panel/SettingsContainer"]
margin_right = 655.36
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="Panel/SettingsButton" to="." method="_on_Button_pressed"]
